Downgraded from JDK 22 to JDK 17 for compatibility